Bug 161779 - FILEOPEN DOCX: vertical line with offset is imported as horizontal line
Summary: FILEOPEN DOCX: vertical line with offset is imported as horizontal line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-25 14:53 UTC by Miklos Vajna
Modified: 2025-02-08 17:07 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (12.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-06-25 14:53 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-25 14:53:31 UTC
Created attachment 194949 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached file

2) Check the line anchored to the only paragraph in the document

Expected result: a vertical line

Actual result: a horizontal line
Comment 1 Commit Notification 2024-06-26 09:21:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c09c85ec384e88c89bff0817e7fe9889d7ed68e

tdf#161779 DOCX import, drawingML: fix handling of translation for lines

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-26 11:20:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/568782f2b6a6abb1f63f5c31d8c3db1dacd0ec01

tdf#161779 DOCX import, drawingML: fix handling of translation for lines

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.