sw/qa/extras/ooxmlexport/ooxmlexport3.cxx
@@ -1153,7 +1153,7 @@ CPPUNIT_TEST_FIXTURE(Test, testArrowPosition)
 
     // This is the correct Y coordinate, the incorrect was 817880.
     assertXPathContent(pXmlDocument, "/w:document/w:body/w:p/w:r/mc:AlternateContent/mc:Choice/w:drawing/wp:anchor"
-        "/wp:positionV/wp:posOffset"_ostr, u"516255"_ustr);
+        "/wp:positionV/wp:posOffset"_ostr, u"516890"_ustr);
 }
 
 CPPUNIT_TEST_FIXTURE(Test, testArrowMarker)
